# librfid

./: .gitignore  COPYING  LICENSING  Makefile  Makefile.am  Makefile.flags.am  README  README.MinGW  TODO  autogen.sh  ccid-dump.sh  configure.ac  configure.in  debian-install.sh  librfid.spec  openct-cm5121-librfid.patch  openct-escape.c  rc632.h  reset-reader.sh  rfid.c  rfid_asic_rc632.c  rfid_asic_rc632_14443a.c  rfid_iso14443_common.c  rfid_layer2.c  rfid_layer2_iso14443a.c  rfid_layer2_iso14443b.c  rfid_layer2_iso15693.c  rfid_proto_mifare_classic.c  rfid_proto_mifare_ul.c  rfid_proto_tcl.c  rfid_protocol.c  rfid_reader.c  rfid_reader_cm5121.c  rfid_reader_cm5121_ccid_direct.c  smartx-read.sh
ccid/: ccid-driver.c
dump/: OKCM0072212121629374972947811440.debian7.ccid
etc/: Makefile.am
etc/udev/: Makefile.am  librfid.rules
include/: Makefile.am
include/librfid/: Makefile.am  rfid.h  rfid_access_mifare_classic.h  rfid_asic.h  rfid_asic_rc632.h  rfid_layer2.h  rfid_layer2_icode1.h  rfid_layer2_iso14443a.h  rfid_layer2_iso14443b.h  rfid_layer2_iso15693.h  rfid_protocol.h  rfid_protocol_icode.h  rfid_protocol_mifare_classic.h  rfid_protocol_mifare_ul.h  rfid_protocol_tagit.h  rfid_protocol_tcl.h  rfid_reader.h  rfid_reader_cm5121.h  rfid_reader_openpcd.h  rfid_reader_spidev.h  rfid_scan.h  rfid_system.h
include/rfid/: rfid.h  rfid_asic.h  rfid_asic_rc632.h  rfid_layer2.h  rfid_layer2_iso14443a.h  rfid_layer2_iso14443b.h  rfid_layer2_iso15693.h  rfid_protocol.h  rfid_protocol_mifare_classic.h  rfid_protocol_mifare_ul.h  rfid_protocol_tcl.h  rfid_reader.h
pegoda/: Makefile  pegoda.c  pegoda.h
python/: Makefile  openpcd.c  openpcd.h  pyrfid.c  test.py
src/: .gitignore  Makefile.am  cm5121_source.h  librfid.pc.in  libusb_dyn.c  rc632.h  rfid.c  rfid_access_mifare_classic.c  rfid_asic_rc632.c  rfid_asic_rc632_14443b.c  rfid_asic_rc632_mifare.c  rfid_iso14443_common.c  rfid_iso14443_common.h  rfid_layer2.c  rfid_layer2_iso14443a.c  rfid_layer2_iso14443b.c  rfid_layer2_iso15693.c  rfid_proto_icode.c  rfid_proto_mifare_classic.c  rfid_proto_mifare_ul.c  rfid_proto_tagit.c  rfid_proto_tcl.c  rfid_protocol.c  rfid_reader.c  rfid_reader_cm5121.c  rfid_reader_cm5121_ccid_direct.c  rfid_reader_cm5121_openct.c  rfid_reader_openpcd.c  rfid_reader_rc632_common.c  rfid_reader_rc632_common.h  rfid_reader_spidev.c  rfid_scan.c  usleep.c  usleep.h
src/ccid/: ccid-driver.c  ccid-driver.h  rfid_reader_cm5121_ccid_direct.c
utils/: .gitignore  Makefile.am  common.c  common.h  librfid-send_script.1  librfid-tool.1  librfid-tool.c  librfid-tool.h  mifare-tool.1  mifare-tool.c  openct-escape.c  send_script.c
win32/: Makefile.am  openpcd.c  openpcd.def  openpcd.h  openpcd.lib
