include $(top_srcdir)/Makefile.flags.am

pkginclude_HEADERS = rfid.h rfid_scan.h rfid_asic.h rfid_asic_rc632.h \
			rfid_layer2.h rfid_layer2_iso14443a.h \
			rfid_layer2_iso14443b.h rfid_layer2_iso15693.h \
			rfid_layer2_icode1.h \
			rfid_protocol.h rfid_protocol_tcl.h \
			rfid_protocol_mifare_ul.h \
			rfid_protocol_mifare_classic.h \
			rfid_protocol_tagit.h \
			rfid_protocol_icode.h \
			rfid_reader.h \
			rfid_system.h \
			rfid_access_mifare_classic.h \
			rfid_reader_cm5121.h \
			rfid_reader_spidev.h \
			rfid_reader_openpcd.h

